// Marketplace API — Database Schema
// Render at: https://dbdiagram.io
// Copy & paste the entire content below into the editor

Table addresses {
  id                 bigint        [pk, increment, not null]
  user_id            bigint        [not null, ref: > users.id]
  label              varchar(255)  [not null, note: "e.g. Home, Office"]
  phone              varchar(255)  [null]
  address_line1      varchar(255)  [not null]
  address_line2      varchar(255)  [null]
  city               varchar(255)  [not null]
  province           varchar(255)  [not null]
  postal_code        varchar(255)  [not null]
  country            varchar(255)  [not null, default: "Philippines"]
  is_default         boolean       [not null, default: false]
  created_at         timestamp     [null]
  updated_at         timestamp     [null]

  indexes {
    user_id
  }
}

Table carts {
  id                 bigint        [pk, increment, not null]
  customer_id        bigint        [not null, ref: > users.id]
  product_id         bigint        [not null, ref: > products.id]
  created_at         timestamp     [null]
  updated_at         timestamp     [null]

  indexes {
    (customer_id, product_id) [unique]
  }
}

Table order_items {
  id                 bigint        [pk, increment, not null]
  order_id           bigint        [not null, ref: > orders.id]
  product_id         bigint        [null, ref: > products.id]
  product_name       varchar(255)  [not null]
  unit_price         decimal(14,2) [not null]
  quantity           int           [not null]
  subtotal           decimal(14,2) [not null]
  created_at         timestamp     [null]
  updated_at         timestamp     [null]
}

Table orders {
  id                 bigint        [pk, increment, not null]
  customer_id        bigint        [not null, ref: > users.id]
  shop_id            bigint        [not null, ref: > shops.id]
  address_id         bigint        [not null, ref: > addresses.id]
  wallet_id          bigint        [null, ref: > wallets.id]
  payment_method     enum          [not null, default: "wallet", note: "wallet | cod"]
  status             enum          [not null, default: "pending", note: "pending | shipped | delivered | cancelled | confirmed"]
  batch_ref          varchar(255)  [null]
  total_amount       decimal(14,2) [not null, default: 0]
  cancel_reason      enum          [null, note: "1 | 2 | 3 | 4 | 5"]
  cancel_reason_notes varchar(255)  [null, note: "Required if cancel_reason is 5"]
  shipped_at         timestamp     [null]
  delivered_at       timestamp     [null]
  cancel_at          timestamp     [null]
  completed_at       timestamp     [null]
  created_at         timestamp     [null]
  updated_at         timestamp     [null]

  indexes {
    customer_id
    shop_id
  }
}

Table products {
  id                 bigint        [pk, increment, not null]
  shop_id            bigint        [not null, ref: > shops.id]
  name               varchar(255)  [not null]
  description        text          [null]
  price              decimal(14,2) [not null]
  stock              int           [not null, default: 0]
  tags               text          [null]
  is_active          boolean       [not null, default: true]
  deleted_at         timestamp     [null]
  created_at         timestamp     [null]
  updated_at         timestamp     [null]

  indexes {
    is_active
    shop_id
  }
}

Table shops {
  id                 bigint        [pk, increment, not null]
  user_id            bigint        [unique, not null, ref: > users.id]
  shop_name          varchar(255)  [unique, not null]
  shop_description   text          [null]
  created_at         timestamp     [null]
  updated_at         timestamp     [null]
}

Table users {
  id                 bigint        [pk, increment, not null]
  name               varchar(255)  [not null]
  email              varchar(255)  [unique, not null]
  email_verified_at  timestamp     [null]
  password           varchar(255)  [not null]
  role               enum          [not null, default: "customer", note: "customer | seller | admin"]
  is_active          boolean       [not null, default: true]
  remember_token     varchar(255)  [null]
  created_at         timestamp     [null]
  updated_at         timestamp     [null]

  indexes {
    email [unique]
  }
}

Table wallet_transactions {
  id                 bigint        [pk, increment, not null]
  wallet_id          bigint        [not null, ref: > wallets.id]
  type               enum          [not null, note: "topup | purchase | refund | sales"]
  amount             decimal(14,2) [not null]
  balance_before     decimal(14,2) [not null]
  balance_after      decimal(14,2) [not null]
  reference_id       bigint        [null]
  status             varchar(255)  [not null, default: "on_hold"]
  description        text          [null]
  created_at         timestamp     [null]

  indexes {
    type
    wallet_id
  }
}

Table wallets {
  id                 bigint        [pk, increment, not null]
  user_id            bigint        [not null, ref: > users.id]
  label              varchar(255)  [not null, default: "Default"]
  balance            decimal(14,2) [not null, default: 0]
  is_default         boolean       [not null, default: false]
  created_at         timestamp     [null]
  updated_at         timestamp     [null]
}

